data/derived/comb/progs/unify/prog4312.ml.out
Characters 44-48:
  let fixpoint (f,b) = wwhile(if f b = b then f, b);;
                                              ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type unit
